<resources>
    <string name="app_name">Task</string>
    <string name="enjoy_events_around_you">Enjoy events around you</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign in</string>
    <string name="subtitle">IFinder is your way into meeting new people and having great time!</string>
    <string name="if_you_need_any_support">If You Need Any Support</string>
    <string name="click_here">Click Here</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="not_a_member">Not A Member?</string>
    <string name="have_an_account">Have An Account?</string>
    <string name="name">Name</string>
    <string name="register_success">You\'ve successfully registered!</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="profile">Profile</string>
    <string name="join_event">Join Event!</string>
    <string name="unsub_from_event">Unsub From Event</string>
    <string name="unknown_host">Check your internet connection</string>
    <string name="email_in_use">Email is in use</string>
    <string name="wrong_cretentials">Wrong credentials!</string>
    <string name="recommended_users">Recommended users</string>
    <string name="recommended_events">Recommended events</string>
    <string name="error_fetching_users">Unknown error while fetching users!</string>
    <string name="error_fetching_events">Unknown error while fetching events!</string>
    <string name="search_for">Search for:</string>
    <string name="events">Events</string>
    <string name="users">Users</string>
    <string name="followers">Followers</string>
    <string name="followees">Followees</string>
    <string name="create_new_event">Create new event</string>
    <string name="created">Created</string>
    <string name="subscribed">Subscribed</string>
    <string name="age">Age</string>
    <string name="city">City</string>
    <string name="dark_theme">Dark theme</string>
    <string name="light_theme">Light theme</string>
    <string name="submit">Submit</string>
    <string name="author">Author:</string>
    <string name="edit_event">Edit Event</string>
    <string name="no_description">No description provided</string>
    <string name="comment">Comment</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsub_from_user">Remove Subscription</string>
    <string name="event_title">Event Title</string>
    <string name="event_description">Event Description</string>
    <string name="pick_a_place">Pick A Place</string>
    <string name="pick_a_date">Pick A Date</string>
    <string name="pick_an_images">Pick An Images</string>
    <string name="add_image">Add image</string>
    <string name="undefined_name">Name Is Undefined</string>
    <string name="undefined_description">Description Is Undefined</string>
    <string name="choose_mode">Choose Mode</string>
    <string name="get_started">Get Started</string>
    <string name="take_part_in_city_s_life">Take part in city\'s life!</string>
    <string name="welcome_text">Find events all around your town or create your own, make new friends and enjoy being part of a large community!</string>
</resources>