<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="175dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/filter_title_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Text.Medium.Medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/radio_group"
        android:text="@string/search_for"
        android:textAlignment="textStart"
        android:layout_margin="8dp"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/filter_title_tv"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="8dp">

        <RadioButton
            android:id="@+id/option_event_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/events"
            style="@style/CustomRadioButton"
            android:textAlignment="textStart"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/option_users_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/users"
            style="@style/CustomRadioButton"
            android:textAlignment="textStart"/>
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>