<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.select.SelectFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/upper_gl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintGuide_begin="200dp"
        app:layout_constraintBottom_toTopOf="@id/title_tv"
        android:orientation="horizontal"/>

    <TextView
        android:id="@+id/title_tv"
        style="@style/Text.Bold.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/upper_gl"
        app:layout_constraintBottom_toTopOf="@id/title_tv"
        android:layout_marginVertical="32sp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/enjoy_events_around_you"/>

    <TextView
        android:id="@+id/subtitle_tv"
        style="@style/Text.Regular.Small"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title_tv"
        android:layout_marginVertical="32sp"
        android:layout_marginHorizontal="16dp"
        android:text="@string/subtitle"/>

    <Button
        android:id="@+id/register_btn"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="32sp"
        app:layout_constraintTop_toBottomOf="@id/subtitle_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/sign_in_btn"
        android:text="@string/register"/>

    <Button
        android:id="@+id/sign_in_btn"
        style="@style/Button.Transparent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="32sp"
        app:layout_constraintTop_toBottomOf="@id/subtitle_tv"
        app:layout_constraintStart_toEndOf="@id/register_btn"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/sign_in"/>

    <ImageView
        android:src="@drawable/fragment_welcome_waves"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

</androidx.constraintlayout.widget.ConstraintLayout>