<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/title_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/EditText"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/description_et"
        android:hint="@string/event_title"/>

    <EditText
        android:id="@+id/description_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/EditText"
        android:layout_marginVertical="8dp"
        android:layout_marginHorizontal="16dp"
        app:layout_constraintTop_toBottomOf="@id/title_et"
        app:layout_constraintBottom_toTopOf="@id/place_ll"
        android:hint="@string/event_description"/>

    <LinearLayout
        android:id="@+id/place_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/description_et"
        app:layout_constraintBottom_toTopOf="@id/date_ll"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="16dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/place_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_place_24"
            android:layout_marginVertical="8dp"/>

        <TextView
            android:id="@+id/pick_a_place_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text.Regular.Small"
            android:textAlignment="viewStart"
            android:layout_marginVertical="8dp"
            android:text="@string/pick_a_place"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/date_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/place_ll"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/images_ll"
        android:layout_marginHorizontal="16dp">

        <ImageView
            android:id="@+id/date_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/calendar_icon"
            android:layout_marginVertical="8dp"/>

        <TextView
            android:id="@+id/pick_a_date_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Text.Regular.Small"
            android:textAlignment="viewStart"
            android:layout_marginVertical="8dp"
            app:layout_constraintTop_toBottomOf="@id/place_ll"
            app:layout_constraintBottom_toTopOf="@id/pick_an_images_tv"
            android:text="@string/pick_a_date"/>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/images_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/date_ll"
        app:layout_constraintBottom_toTopOf="@id/submit_btn"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="16dp">

        <ImageView
            android:id="@+id/file_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/file_add_icon"
            android:layout_marginVertical="8dp"/>

        <TextView
            android:id="@+id/pick_an_images_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Text.Regular.Small"
            android:textAlignment="viewStart"
            android:layout_marginVertical="8dp"
            app:layout_constraintTop_toBottomOf="@id/pick_a_date_tv"
            app:layout_constraintBottom_toTopOf="@id/submit_btn"
            android:text="@string/pick_an_images"/>

    </LinearLayout>

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Button"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/images_ll"
        android:text="@string/submit"/>

</androidx.constraintlayout.widget.ConstraintLayout>