<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".presentation.welcome.WelcomeFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/img_1"
        android:foreground="@drawable/inverse_color_bottom_gradient"
        android:scaleType="centerCrop"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/upper_gl"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/upper_gl"
        app:layout_constraintBottom_toTopOf="@id/text_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/Text.Medium.Medium"
        android:textColor="?attr/colorOnPrimary"
        android:text="@string/take_part_in_city_s_life"/>

    <TextView
        android:id="@+id/text_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/title_tv"
        app:layout_constraintBottom_toTopOf="@id/submit_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="?attr/colorOnPrimary"
        style="@style/Text.Regular.Small"
        android:text="@string/welcome_text"
        android:layout_marginHorizontal="24dp"/>

    <Button
        android:id="@+id/submit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Button"
        android:text="@string/get_started"
        app:layout_constraintBottom_toBottomOf="@id/bottom_gl"
        app:layout_constraintTop_toBottomOf="@id/text_tv"
        android:layout_marginHorizontal="16dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottom_gl"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9"/>

</androidx.constraintlayout.widget.ConstraintLayout>