<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/UserCardView">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/edit_iv"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:src="@drawable/edit"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/profile_title_tv"
            style="@style/Text.Medium.Small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/avatar_cv"
            android:text="@string/profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"/>

        <androidx.cardview.widget.CardView
            android:id="@+id/avatar_cv"
            android:layout_width="96dp"
            android:layout_height="96dp"
            app:layout_constraintTop_toBottomOf="@id/profile_title_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/user_gmail_tv"
            android:layout_margin="8dp"
            app:cardCornerRadius="96dp">
            <ImageView
                android:id="@+id/avatar_iv"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:scaleType="centerCrop"/>
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/user_gmail_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text.Regular.ExtraSmall"
            app:layout_constraintTop_toBottomOf="@id/avatar_cv"
            app:layout_constraintBottom_toTopOf="@id/user_name_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="8dp"/>

        <TextView
            android:id="@+id/user_name_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text.Medium.Small"
            app:layout_constraintTop_toBottomOf="@id/user_gmail_tv"
            app:layout_constraintBottom_toTopOf="@id/subsribe_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="8dp"/>

        <Button
            android:id="@+id/subsribe_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/user_name_tv"
            app:layout_constraintBottom_toTopOf="@id/upper_gl"
            style="@style/Button.PaddingSmall"
            android:layout_margin="8dp"
            android:text="@string/subscribe"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/upper_gl"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.65"/>

        <TextView
            android:id="@+id/authors_count_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text.Medium.Small"
            app:layout_constraintTop_toBottomOf="@id/upper_gl"
            app:layout_constraintBottom_toTopOf="@id/authors_tv"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/followers_count_tv"
            android:layout_margin="8dp"/>

        <TextView
            android:id="@+id/followers_count_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text.Medium.Small"
            app:layout_constraintBottom_toTopOf="@id/followers_tv"
            app:layout_constraintTop_toBottomOf="@id/upper_gl"
            app:layout_constraintStart_toEndOf="@id/authors_tv"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="8dp"/>

        <TextView
            android:id="@+id/authors_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text.Regular.ExtraSmall"
            android:text="@string/followees"
            app:layout_constraintTop_toBottomOf="@id/authors_count_tv"
            app:layout_constraintBottom_toTopOf="@id/bottom_gl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/followers_tv"
            android:layout_margin="8dp"/>

        <TextView
            android:id="@+id/followers_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text.Regular.ExtraSmall"
            android:text="@string/followers"
            app:layout_constraintTop_toBottomOf="@id/followers_count_tv"
            app:layout_constraintBottom_toTopOf="@id/bottom_gl"
            app:layout_constraintStart_toEndOf="@id/authors_tv"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="8dp"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bottom_gl"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.85"
            app:layout_constraintBottom_toTopOf="@id/create_new_event_btn"/>

        <TextView
            android:id="@+id/create_new_event_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_new_event"
            style="@style/Text.Bold.Small"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/bottom_gl"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>