<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/image_vp"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        app:layout_constraintBottom_toTopOf="@id/title_tv"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal"
        android:layout_margin="16dp"/>

    <TextView
        android:id="@+id/title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/image_vp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/subtitle_tv"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        style="@style/Text.Bold.Large"/>

    <TextView
        android:id="@+id/subtitle_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="viewStart"
        app:layout_constraintTop_toBottomOf="@id/title_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/date_tv"
        style="@style/Text.Regular.Small"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp" />

    <TextView
        android:id="@+id/date_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/subtitle_tv"
        app:layout_constraintBottom_toTopOf="@id/map_cv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        style="@style/Text.Regular.Small"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/map_cv"
        android:layout_width="match_parent"
        android:layout_height="270dp"
        app:layout_constraintTop_toBottomOf="@id/date_tv"
        app:layout_constraintBottom_toTopOf="@id/author_name_tv"
        android:layout_margin="8dp"
        app:cardCornerRadius="16dp">

        <ImageView
            android:id="@+id/map_iv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"/>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/author_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="8dp"
        style="@style/Text.Regular.Small"
        android:text="@string/author"
        app:layout_constraintTop_toBottomOf="@id/map_cv"
        app:layout_constraintBottom_toTopOf="@id/join_btn"
        app:layout_constraintStart_toStartOf="parent"/>

    <Button
        android:id="@+id/join_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Button"
        android:text="@string/join_event"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/author_name_tv"
        app:layout_constraintBottom_toTopOf="@id/edit_btn"
        />

    <Button
        android:id="@+id/edit_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Button.Transparent"
        android:text="@string/edit_event"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/join_btn"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>